--- a/NorthWestLabs/Views/Singapore/CurrentQuotes.cshtml
+++ b/NorthWestLabs/Views/Singapore/CurrentQuotes.cshtml
@@ -3,11 +3,12 @@
     ViewBag.Title = "CurrentQuotes";
 }
 
-<h2>Current Quotes</h2>
-
-<body>
-    <p>@ViewBag.Result</p>
-    <p>@ViewBag.Count</p>
-    <br />
-    @Html.ActionLink("See Requests", "SeeQuotes")
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>Current Quotes</h2><br />
+        <p>@ViewBag.Result</p>
+        <p>@ViewBag.Count</p>
+        <br />
+        <input type="button" value="See Requests" onclick="location.href='@Url.Action("SeeQuotes")'" class="btn btn-primary btn-lg"/>
+    </div>
 </body>
