--- a/NorthWestLabs/Views/Singapore/WorkOrderDetails.cshtml
+++ b/NorthWestLabs/Views/Singapore/WorkOrderDetails.cshtml
@@ -4,79 +4,87 @@
     ViewBag.Title = "WorkOrderDetails";
 }
 
-<h2>WorkOrderDetails</h2>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <div>
+            <h2>Order Details</h2>
+            <hr />
+            <fieldset style="width: 600px;">
+                <dl class="dl-horizontal">
+                    <dt>
+                        @Html.DisplayNameFor(model => model.ReceivedDate)
+                    </dt>
 
-<div>
-    <h4>WorkOrder</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceivedDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.ReceivedDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.DueDate)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DueDate)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.DueDate)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DueDate)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.RushOrder)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.RushOrder)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.RushOrder)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.RushOrder)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.comments)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.comments)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.comments)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.comments)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.ReceivedBy)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceivedBy)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.ReceivedBy)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedBy)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.WOReport)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WOReport)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.WOReport)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.WOReport)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.ClientID)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClientID)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.ClientID)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClientID)
-        </dd>
+                    <dt>
+                        @Html.DisplayNameFor(model => model.SummaryStatus)
+                    </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SummaryStatus)
-        </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.SummaryStatus)
+                    </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.SummaryStatus)
-        </dd>
+                </dl>
+            </fieldset>
+        </div>
+        <br />
+        <p>
+            @Html.ActionLink("Edit", "EditWorkOrder", new { id = Model.WrkOrdID }, new { @class = "btn btn-primary btn-lg" })
+            <input value="Back to List" onclick="location.href='@Url.Action("ListWorkOrder")'" class="btn btn-primary btn-lg" />
+        </p>
+    </div>
+</body>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "EditWorkOrder", new { id = Model.WrkOrdID }) |
-    @Html.ActionLink("Back to List", "ListWorkOrder")
-</p>
+
+
