--- a/NorthWestLabs/Views/Seattle/Delete.cshtml
+++ b/NorthWestLabs/Views/Seattle/Delete.cshtml
@@ -4,109 +4,116 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>Delete Client</h2>
+        <div>
+            <hr />
+            <fieldset style="width: 500px;">
+                <h3>Are you sure you want to delete this?</h3>
+                <div>                    
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClFName)
+                        </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Client</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ClFName)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClFName)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClFName)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClLName)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClLName)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClLName)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClLName)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.CompanyName)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CompanyName)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.CompanyName)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CompanyName)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClAddress1)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClAddress1)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClAddress1)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClAddress1)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClAddress2)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClAddress2)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClAddress2)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClAddress2)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClEmail)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClEmail)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClEmail)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClEmail)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClPhone)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClPhone)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClPhone)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClPhone)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.BankAccouNum)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BankAccouNum)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.BankAccouNum)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.BankAccouNum)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClStatus)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClStatus)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClStatus)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClStatus)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.BankID)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.BankID)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.BankID)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.BankID)
-        </dd>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.DisID)
+                        </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DisID)
-        </dt>
+                        <dd>
+                            @Html.DisplayFor(model => model.DisID)
+                        </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.DisID)
-        </dd>
-
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
+                    </dl>
+                </div>
+            </fieldset>
         </div>
-    }
-</div>
+
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
+
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary btn-lg" })
+            </div>
+        }
+    </div>
+</body>
