--- a/NorthWestLabs/Views/Seattle/EmployeeDelete.cshtml
+++ b/NorthWestLabs/Views/Seattle/EmployeeDelete.cshtml
@@ -4,61 +4,69 @@
     ViewBag.Title = "EmployeeDelete";
 }
 
-<h2>EmployeeDelete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Employee</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpFName)
-        </dt>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>Delete Employee</h2>
+        <div>
+            <hr />
+            <fieldset style="width: 500px;">
+                <h3>Are you sure you want to delete this?</h3>
+                <div>
+                    
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpFName)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpFName)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpFName)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpLName)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpLName)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpLName)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpLName)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpWage)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpWage)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpWage)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpWage)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpPassword)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpPassword)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpPassword)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpPassword)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpType)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpType)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpType)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpType)
+                        </dd>
+                    
+                    </dl>
+                </div>
+            </fieldset>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-    </dl>
-
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "EmployeeIndex")
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "EmployeeIndex")
+                </div>
+            }
         </div>
-    }
-</div>
+    </div>
+</body>
