--- a/NorthWestLabs/Views/Seattle/EmployeeDetails.cshtml
+++ b/NorthWestLabs/Views/Seattle/EmployeeDetails.cshtml
@@ -4,55 +4,63 @@
     ViewBag.Title = "EmployeeDetails";
 }
 
-<h2>EmployeeDetails</h2>
 
-<div>
-    <h4>Employee</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpFName)
-        </dt>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>Employee Details</h2>
+        <div>
+            <hr />
+            <fieldset style="width: 500px;">
+                <div>                    
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpFName)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpFName)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpFName)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpLName)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpLName)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpLName)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpLName)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpWage)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpWage)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpWage)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpWage)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpPassword)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpPassword)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpPassword)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpPassword)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EmpType)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.EmpType)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.EmpType)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.EmpType)
+                        </dd>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "EmployeeEdit", new { id = Model.EmpID }) |
-    @Html.ActionLink("Back to List", "EmployeeIndex")
-</p>
+                    </dl>
+                </div>
+            </fieldset>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "EmployeeEdit", new { id = Model.EmpID }) |
+            @Html.ActionLink("Back to List", "EmployeeIndex")
+        </p>
+        
+    </div>
+</body>
