--- a/NorthWestLabs/Views/Seattle/SeeQuotes.cshtml
+++ b/NorthWestLabs/Views/Seattle/SeeQuotes.cshtml
@@ -4,99 +4,105 @@
     ViewBag.Title = "SeeQuotes";
 }
 
-<h2>SeeQuotes</h2>
 
-<table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.QCode)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Email)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.FullName)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DayNum)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.TotalPrice)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.BP)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.DS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.IS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PF)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.PS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.CS)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Custom)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Comments)
-        </th>
-        <th></th>
-    </tr>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 13px;">
+        <h2>All Employees</h2>
+        <br />
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayNameFor(model => model.QCode)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Email)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.FullName)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DayNum)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.TotalPrice)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.BP)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.DS)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.IS)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PF)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.PS)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.CS)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Custom)
+                </th>
+                <th>
+                    @Html.DisplayNameFor(model => model.Comments)
+                </th>
+                <th></th>
+            </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.QCode)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Email)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.FullName)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DayNum)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.TotalPrice)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.BP)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.DS)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.IS)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PF)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.PS)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.CS)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Custom)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Comments)
-        </td>
-        
-    </tr>
-}
+            @foreach (var item in Model)
+            {
+                <tr>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.QCode)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Email)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.FullName)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DayNum)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.TotalPrice)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.BP)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.DS)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.IS)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PF)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.PS)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.CS)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Custom)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.Comments)
+                    </td>
 
-</table>
+                </tr>
+            }
 
-<p>
-    @Html.ActionLink("Return to Home", "SeattleHome")
-</p>
+        </table>
+
+        <p>
+            @Html.ActionLink("Return to Home", "SeattleHome", null, new { @class = "btn btn-primary btn-lg" })
+        </p>
+    </div>
+</body>
