--- a/NorthWestLabs/Views/Seattle/WorkOrderDelete.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderDelete.cshtml
@@ -4,85 +4,92 @@
     ViewBag.Title = "WorkOrderDelete";
 }
 
-<h2>WorkOrderDelete</h2>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>WorkOrder</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceivedDate)
-        </dt>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>Delete Work Order</h2>
+        <div>
+            <hr />
+            <fieldset style="width: 500px;">
+                <h3>Are you sure you want to delete this?</h3>
+                <div>                    
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ReceivedDate)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedDate)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.ReceivedDate)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DueDate)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.DueDate)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DueDate)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.DueDate)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.RushOrder)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.RushOrder)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.RushOrder)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.RushOrder)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.comments)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.comments)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.comments)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.comments)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceivedBy)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ReceivedBy)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedBy)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.ReceivedBy)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.WOReport)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.WOReport)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.WOReport)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.WOReport)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClientID)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClientID)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClientID)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClientID)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SummaryStatus)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.SummaryStatus)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SummaryStatus)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.SummaryStatus)
+                        </dd>
 
-    </dl>
+                    </dl>
+                </div>
+            </fieldset>
+            @using (Html.BeginForm())
+            {
+                @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "WorkIndex")
+                <div class="form-actions no-color">
+                    <input type="submit" value="Delete" class="btn btn-default" /> |
+                    @Html.ActionLink("Back to List", "WorkIndex")
+                </div>
+            }
         </div>
-    }
-</div>
+    </div>
+</body>
