--- a/NorthWestLabs/Views/Seattle/WorkOrderDetails.cshtml
+++ b/NorthWestLabs/Views/Seattle/WorkOrderDetails.cshtml
@@ -4,71 +4,78 @@
     ViewBag.Title = "WorkOrderDetails";
 }
 
-<h2>WorkOrderDetails</h2>
 
-<div>
-    <h4>WorkOrder</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceivedDate)
-        </dt>
+<body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>Work Order Details</h2>
+        <div>
+            <hr />
+            <fieldset style="width: 500px;">
+                <div>                    
+                    <dl class="dl-horizontal">
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ReceivedDate)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedDate)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.ReceivedDate)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.DueDate)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.DueDate)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.DueDate)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.DueDate)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.RushOrder)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.RushOrder)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.RushOrder)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.RushOrder)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.comments)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.comments)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.comments)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.comments)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ReceivedBy)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ReceivedBy)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ReceivedBy)
-        </dd>       
+                        <dd>
+                            @Html.DisplayFor(model => model.ReceivedBy)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.ClientID)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.ClientID)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.ClientID)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.ClientID)
+                        </dd>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.SummaryStatus)
-        </dt>
+                        <dt>
+                            @Html.DisplayNameFor(model => model.SummaryStatus)
+                        </dt>
 
-        <dd>
-            @Html.DisplayFor(model => model.SummaryStatus)
-        </dd>
+                        <dd>
+                            @Html.DisplayFor(model => model.SummaryStatus)
+                        </dd>
 
-    </dl>
-</div>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.WrkOrdID }) |
-    @Html.ActionLink("Back to List", "WorkIndex")
-</p>
+                    </dl>
+                </div>
+            </fieldset>
+        </div>
+        <p>
+            @Html.ActionLink("Edit", "Edit", new { id = Model.WrkOrdID }) |
+            @Html.ActionLink("Back to List", "WorkIndex")
+        </p>
+    </div>
+</body>
