--- a/NorthWestLabs/Views/Singapore/SeeQuotes.cshtml
+++ b/NorthWestLabs/Views/Singapore/SeeQuotes.cshtml
@@ -6,7 +6,7 @@
 
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
-    <div style="background-color: lightgray; opacity: 0.9; font-size: 10px; padding-left: 50px; padding-top: 20px; padding-bottom: 20px;">
+    <div style="font-size: 15px;" class="jumbotron">
         <h2>Current Quote Requests</h2>
         <table class="table">
 
@@ -20,27 +20,8 @@
                 <th>
                     @Html.DisplayNameFor(model => model.FullName)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DayNum)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.BP)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DS)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IS)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PF)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PS)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CS)
-                </th>
+                
+                
                 <th>
                     @Html.DisplayNameFor(model => model.Custom)
                 </th>
@@ -62,27 +43,8 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.FullName)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DayNum)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.BP)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DS)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.IS)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PF)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PS)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CS)
-                    </td>
+                    
+                    
                     <td>
                         @Html.DisplayFor(modelItem => item.Custom)
                     </td>
