--- a/NorthWestLabs/Views/Home/AddQuote.cshtml
+++ b/NorthWestLabs/Views/Home/AddQuote.cshtml
@@ -5,15 +5,15 @@
 }
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
-    <div style="background-color: lightgray; opacity: 0.9;">
+    <div class="jumbotron" style="font-size: 15px;">
         
 
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
-            <br />
-            <center><h1>Request a Quote</h1></center>
-            <div class="form-horizontal" style="padding-left: 40px;">
+           
+            <center><h2>Request a Quote</h2></center>
+            <div class="form-horizontal">
 
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
@@ -111,10 +111,11 @@
                         @Html.ValidationMessageFor(model => model.Comments, "", new { @class = "text-danger" })
                     </div>
                 </div>
-
+                <br />
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Send Quote" class="btn btn-default" />
+                        <input type="submit" value="Send Quote" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Back to Home", "Index", null, new { @class="btn btn-primary btn-lg" })
                     </div>
                 </div>
             </div>
