--- a/NorthWestLabs/Views/Seattle/SeeQuotes.cshtml
+++ b/NorthWestLabs/Views/Seattle/SeeQuotes.cshtml
@@ -6,8 +6,8 @@
 
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
-    <div class="jumbotron" style="font-size: 13px;">
-        <h2>All Employees</h2>
+    <div class="jumbotron" style="font-size: 15px;">
+        <h2>All Quote Requests</h2>
         <br />
         <table class="table">
             <tr>
@@ -20,30 +20,7 @@
                 <th>
                     @Html.DisplayNameFor(model => model.FullName)
                 </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DayNum)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.TotalPrice)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.BP)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.DS)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.IS)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PF)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.PS)
-                </th>
-                <th>
-                    @Html.DisplayNameFor(model => model.CS)
-                </th>
+                
                 <th>
                     @Html.DisplayNameFor(model => model.Custom)
                 </th>
@@ -65,30 +42,7 @@
                     <td>
                         @Html.DisplayFor(modelItem => item.FullName)
                     </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DayNum)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.TotalPrice)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.BP)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.DS)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.IS)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PF)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.PS)
-                    </td>
-                    <td>
-                        @Html.DisplayFor(modelItem => item.CS)
-                    </td>
+                    
                     <td>
                         @Html.DisplayFor(modelItem => item.Custom)
                     </td>
