--- a/NorthWestLabs/Views/Singapore/AssignPrice.cshtml
+++ b/NorthWestLabs/Views/Singapore/AssignPrice.cshtml
@@ -5,13 +5,13 @@
 }
 
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
-    <div class="jumbotron">
+    <div class="jumbotron" style="font-size: 15px;">
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
             <div class="form-horizontal">
-                <h4>AddQuote</h4>
+                <h2>Send Quote Price</h2>
                 <hr />
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                 <div class="form-group">
@@ -43,6 +43,7 @@
                     </div>
                 </div>
 
+                <p class="text-danger">@ViewBag.TotalPrice</p>
                 <div class="form-group">
                     @Html.LabelFor(model => model.TotalPrice, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-10">
@@ -127,12 +128,12 @@
 
                 <div class="form-group">
                     <div class="col-md-offset-2 col-md-10">
-                        <input type="submit" value="Save" class="btn btn-default" />
+                        <input type="submit" value="Send Price" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Back to List", "Index", null, new { @class = "btn btn-primary btn-lg" })
                     </div>
                 </div>
             </div>
         }<div>
-    @Html.ActionLink("Back to List", "Index", new { @class = "btn btn-primary btn-lg" })
 </div>
     </div>
 </body>
