--- a/NorthWestLabs/Views/Singapore/EditWorkOrder.cshtml
+++ b/NorthWestLabs/Views/Singapore/EditWorkOrder.cshtml
@@ -4,94 +4,97 @@
     ViewBag.Title = "WorkOrderEdit";
 }
 
+
 <body style="background-image: url(../../Content/Images/hans-reniers-lQGJCMY5qcM-unsplash.jpg); background-size: cover;">
     <div class="jumbotron" style="font-size: 15px;">
-        <h2>Update Work Orders</h2><br />
-                                   
+        <h1>Edit Work Order</h1>
+        <br />
         @using (Html.BeginForm())
         {
             @Html.AntiForgeryToken()
 
-            
             <div class="form-horizontal">
-                <fieldset>
-                    <hr />
-                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-                    @Html.HiddenFor(model => model.WrkOrdID)
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ReceivedDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.ReceivedDate, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.ReceivedDate, "", new { @class = "text-danger" })
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                @Html.HiddenFor(model => model.WrkOrdID)
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ReceivedDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.ReceivedDate, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ReceivedDate, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.DueDate, new { @readonly="readonly"})
+                        @Html.ValidationMessageFor(model => model.DueDate, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    @Html.LabelFor(model => model.RushOrder, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        <div class="checkbox">
+                            @Html.EditorFor(model => model.RushOrder)
+                            @Html.ValidationMessageFor(model => model.RushOrder, "", new { @class = "text-danger" })
                         </div>
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.DueDate, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.DueDate, htmlAttributes: new { @readonly = "readonly" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.TextBoxFor(model => model.comments, new { @readonly = "readonly" })
+                        @Html.ValidationMessageFor(model => model.comments, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.RushOrder, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            <div class="checkbox">
-                                @Html.EditorFor(model => model.RushOrder)
-                                @Html.ValidationMessageFor(model => model.RushOrder, "", new { @class = "text-danger" })
-                            </div>
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ReceivedBy, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(model => model.ReceivedBy, new SelectList(ViewBag.Employees, "EmpID", "EmpFName"))
+                        @Html.ValidationMessageFor(model => model.ReceivedBy, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.comments, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.comments, htmlAttributes: new { @readonly = "readonly" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.WOReport, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.WOReport, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.WOReport, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ReceivedBy, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.ReceivedBy, new SelectList(ViewBag.Employees, "EmpID", "EmpFName"))
-                            @Html.ValidationMessageFor(model => model.ReceivedBy, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(model => model.ClientID, new SelectList(ViewBag.Clients, "ClientID", "ClFName"))
+                        @Html.ValidationMessageFor(model => model.ClientID, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.WOReport, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.EditorFor(model => model.WOReport, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.WOReport, "", new { @class = "text-danger" })
-                        </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.SummaryStatus, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.DropDownListFor(model => model.SummaryStatus, new SelectList(ViewBag.Summary, "StatusDesc", "StatusDesc"))
+                        @Html.ValidationMessageFor(model => model.SummaryStatus, "", new { @class = "text-danger" })
                     </div>
+                </div>
 
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.ClientID, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.TextBoxFor(model => model.ClientID, htmlAttributes: new { @readonly = "readonly" })
-                        </div>
+                <div class="form-group">
+                    <div class="col-md-offset-2 col-md-10">
+                        <input type="submit" value="Save" class="btn btn-primary btn-lg" />
+                        @Html.ActionLink("Back to List", "ListWorkOrder", null, new { @class = "btn btn-primary btn-lg" })
                     </div>
-
-                    <div class="form-group">
-                        @Html.LabelFor(model => model.SummaryStatus, htmlAttributes: new { @class = "control-label col-md-2" })
-                        <div class="col-md-10">
-                            @Html.DropDownListFor(model => model.SummaryStatus, new SelectList(ViewBag.Summary, "StatusDesc", "StatusDesc"))
-                            @Html.ValidationMessageFor(model => model.SummaryStatus, "", new { @class = "text-danger" })
-                        </div>
-                    </div>
-                </fieldset><br />
-
-                    <div class="form-group">
-                        <div class="col-md-offset-2 col-md-10">
-                            <input type="submit" value="Save" class="btn btn-primary btn-lg" />
-                            <input value="Back to List" onclick="location.href='@Url.Action("ListWorkOrder")'" class="btn btn-primary btn-lg" />
-                        </div>
-                    </div>
+                </div>
             </div>
         }
 
+        <div>
+            
+        </div>
     </div>
 </body>
-
